change dependecy